# ai_agent

./: Cargo.toml  README.md  ai_backend.did  dfx.json  did.sh  package-lock.json  package.json  rr.txt  wasmalyzer_backend.did
src/ai_backend/: Cargo.toml  ai_backend.did
src/ai_backend/src/: ai.rs  canister_manager.rs  lib.rs
src/ai_frontend/: package.json
src/ai_frontend/src/: App.vue
src/wasmalyzer_backend/: Cargo.toml  wasmalyzer_backend.did
src/wasmalyzer_backend/src/: ai_agent.rs  auth.rs  canister_info.rs  canister_manager.rs  github_manager.rs  lib.rs  user_profile.rs
src/wasmalyzer_backend/src/canister_info/: canister_scanner.rs
src/wasmalyzer_frontend/: components.d.ts  index.html  package.json  vite.config.js
src/wasmalyzer_frontend/public/data/: canisters.json
src/wasmalyzer_frontend/src/: App.vue  main.js
src/wasmalyzer_frontend/src/components/dashboard/: BestSellingWidget.vue  PieChart.vue  RecentSalesWidget.vue  StatsWidget.vue
src/wasmalyzer_frontend/src/components/landing/: FeaturesWidget.vue  FooterWidget.vue  HeroWidget.vue  HighlightsWidget.vue  TopbarWidget.vue
src/wasmalyzer_frontend/src/layout/: AppFooter.vue  AppMenu.vue  AppSidebar.vue  AppTopbar.vue
src/wasmalyzer_frontend/src/router/: index.js
src/wasmalyzer_frontend/src/service/: CanisterService.js  CustomerService.js  ProductService.js
src/wasmalyzer_frontend/src/views/: Dashboard.vue
src/wasmalyzer_frontend/src/views/pages/: CanistersView.vue  ChatBox.vue  HelpView.vue  HistoryView.vue  Landing.vue  MeView.vue  ReportsView.vue  SettingsView.vue  ThreatsView.vue
(+5 files in other folders)
