[package]
name = "wasmalyzer_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.16"
ic-cdk-timers = "0.10" # Feel free to remove this dependency if you don't need timers
ic-cdk-macros = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ic-stable-structures = "0.5.6"
candid-extractor = "0.1.5"
anyhow = "1.0"
base64 = "0.13"
reqwest = { version = "0.11", features = ["json"] }
syn = { version = "1.0", features = ["full", "parsing"] }
quote = "1.0"
wasm-bindgen = "0.2"


 
